--- a/aboutme.html
+++ b/aboutme.html
@@ -10,9 +10,9 @@
 <script src="script/simpleScript.js"></script>
 </head>
 
-<body>
+<body style="background-image: url('./images/placeholder.jpg');">
 	<div class="topnav">
-	  <a href="#home" class="active">Professor Kai</a>
+	  <a href="./index.html" class="active">Professor Kai</a>
 	  <!-- Navigation links (hidden by default) -->
 		<div id="myLinks">
 			<a href="#math1">Math ???</a>
@@ -26,17 +26,18 @@
 
 	<div class="mainContainer">
 		<div class="center">
-			<table width="1200" border="5" align="center" bordercolor="#0000FF" margin="auto" bgcolor="##FF00FD" style="color:white">
+			<h1 id="title" align="center">ABOUT ME</h1>
+			<br>
+			<table width="1200" border="5" align="center" bordercolor="#FFFFFF" margin="auto" bgcolor="##FF00FD" style="color:white">
+				<tr>
+					<td height="50" colspan="5" align="center" valign="middle" bgcolor="#80cee1">
+						<strong><p style="color:black;">Biography</p></strong>
+					</td>
+
+				</tr>
 				<tbody>
-					<tr>
-						<h1 id="title" align="center"> My Class </h1>
-					</tr>
-					<tr height="100">
-						<td align="center">
-							<button class="button button1" onclick="location.href='./math125.html'"> MATH 125 </button>
-							<button class="button button1"> MATH 2?? </button>
-						</td>
-						
+					<tr height="50px">
+						<td align="center" valign="middle"> Write a brief biography here </td>
 					</tr>
 				</tbody>
 			</table>
